lab4/Code/syntax.output
State 25 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | IF LP error RP Stmt
   36     | IF LP error RP Stmt ELSE Stmt
   37     | WHILE LP error RC
   38     | WHILE LP error RP Stmt
   39     | error SEMI

   40 DefList: Def DefList
   41        | %empty

   42 Def: Specifier DecList SEMI
   43    | error SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 21 26 35 36 37 38 39 43
    FLOAT <node_ins> (258) 65
    INT <node_ins> (259) 18 64
    TYPE <node_ins> (260) 10
    STRUCT <node_ins> (261) 12 13
    RETURN <node_ins> (262) 31
    IF <node_ins> (263) 32 33 35 36
    ELSE <node_ins> (264) 33 36
    WHILE <node_ins> (265) 34 37 38
    ID <node_ins> (266) 14 16 17 19 20 21 59 60 62 63
    SEMI <node_ins> (267) 4 5 7 29 31 39 42 43
    COMMA <node_ins> (268) 9 22 45 66
    ASSIGNOP <node_ins> (269) 47 48
    RELOP <node_ins> (270) 51
    PLUS <node_ins> (271) 52
    MINUS <node_ins> (272) 53 57
    STAR <node_ins> (273) 54
    DIV <node_ins> (274) 55
    AND <node_ins> (275) 49
    OR <node_ins> (276) 50
    DOT <node_ins> (277) 62
    NOT <node_ins> (278) 58
    LP <node_ins> (279) 19 20 21 32 33 34 35 36 37 38 56 59 60
    RP <node_ins> (280) 19 20 21 32 33 34 35 36 38 56 59 60
    LB <node_ins> (281) 18 61
    RB <node_ins> (282) 18 61
    LC <node_ins> (283) 12 25
    RC <node_ins> (284) 12 25 26 37
    UMINUS (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node_ins> (33)
        on left: 1
        on right: 0
    ExtDefList <node_ins> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <node_ins> (35)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <node_ins> (36)
        on left: 8 9
        on right: 4 9
    Specifier <node_ins> (37)
        on left: 10 11
        on right: 4 5 6 7 24 42
    StructSpecifier <node_ins> (38)
        on left: 12 13
        on right: 11
    OptTag <node_ins> (39)
        on left: 14 15
        on right: 12
    Tag <node_ins> (40)
        on left: 16
        on right: 13
    VarDec <node_ins> (41)
        on left: 17 18
        on right: 8 9 18 24 46 47
    FunDec <node_ins> (42)
        on left: 19 20 21
        on right: 6 7
    VarList <node_ins> (43)
        on left: 22 23
        on right: 19 22
    ParamDec <node_ins> (44)
        on left: 24
        on right: 22 23
    CompSt <node_ins> (45)
        on left: 25 26
        on right: 6 30
    StmtList <node_ins> (46)
        on left: 27 28
        on right: 25 27
    Stmt <node_ins> (47)
        on left: 29 30 31 32 33 34 35 36 37 38 39
        on right: 27 32 33 34 35 36 38
    DefList <node_ins> (48)
        on left: 40 41
        on right: 12 25 40
    Def <node_ins> (49)
        on left: 42 43
        on right: 40
    DecList <node_ins> (50)
        on left: 44 45
        on right: 42 45
    Dec <node_ins> (51)
        on left: 46 47
        on right: 44 45
    Exp <node_ins> (52)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 29 31 32 33 34 47 48 49 50 51 52 53 54 55 56 57 58 61 62 66 67
    Args <node_ins> (53)
        on left: 66 67
        on right: 59 66


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   21       | ID . LP error RP

    LP  shift, and go to state 19

    $default  reduce using rule 17 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 8 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 23
    SEMI   shift, and go to state 24
    LC     shift, and go to state 25

    CompSt  go to state 26


State 18

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 19

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP
   21       | ID LP . error RP

    error   shift, and go to state 31
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 32

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 34
    ParamDec         go to state 35


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 16


State 22

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 38


State 23

   26 CompSt: error . RC

    RC  shift, and go to state 39


State 24

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 25

   25 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 41 (DefList)]
    FLOAT   reduce using rule 41 (DefList)
    INT     reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 30


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   43 Def: error . SEMI

    SEMI  shift, and go to state 41


State 28

   42 Def: Specifier . DecList SEMI

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 30

   40 DefList: Def . DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 41 (DefList)]
    FLOAT   reduce using rule 41 (DefList)
    INT     reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 30


State 31

   21 FunDec: ID LP error . RP

    RP  shift, and go to state 47


State 32

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 33

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 48


State 34

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 35

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 23 (VarList)


State 36

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 37

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 38

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


State 39

   26 CompSt: error RC .

    $default  reduce using rule 26 (CompSt)


State 40

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 52
    FLOAT   shift, and go to state 53
    INT     shift, and go to state 54
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 25

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 41

   43 Def: error SEMI .

    $default  reduce using rule 43 (Def)


State 42

   18 VarDec: VarDec . LB INT RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 22

    $default  reduce using rule 46 (Dec)


State 43

   42 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 67


State 44

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 44 (DecList)


State 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 46

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


State 47

   21 FunDec: ID LP error RP .

    $default  reduce using rule 21 (FunDec)


State 48

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 24 (ParamDec)


State 49

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 50

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 69
    ParamDec         go to state 35


State 51

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 52

   26 CompSt: error . RC
   39 Stmt: error . SEMI

    SEMI  shift, and go to state 70
    RC    shift, and go to state 39


State 53

   65 Exp: FLOAT .

    $default  reduce using rule 65 (Exp)


State 54

   64 Exp: INT .

    $default  reduce using rule 64 (Exp)


State 55

   31 Stmt: RETURN . Exp SEMI

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 71


State 56

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt
   35     | IF . LP error RP Stmt
   36     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 72


State 57

   34 Stmt: WHILE . LP Exp RP Stmt
   37     | WHILE . LP error RC
   38     | WHILE . LP error RP Stmt

    LP  shift, and go to state 73


State 58

   59 Exp: ID . LP Args RP
   60    | ID . LP RP
   63    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 63 (Exp)


State 59

   57 Exp: MINUS . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 75


State 60

   58 Exp: NOT . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 76


State 61

   56 Exp: LP . Exp RP

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 77


State 62

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 63

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 78


State 64

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 52
    FLOAT   shift, and go to state 53
    INT     shift, and go to state 54
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 25

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 79
    Stmt      go to state 64
    Exp       go to state 65


State 65

   29 Stmt: Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    SEMI      shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90


State 66

   47 Dec: VarDec ASSIGNOP . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 91


State 67

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


State 68

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 92
    Dec      go to state 44


State 69

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 70

   39 Stmt: error SEMI .

    $default  reduce using rule 39 (Stmt)


State 71

   31 Stmt: RETURN Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    SEMI      shift, and go to state 93
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90


State 72

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt
   35     | IF LP . error RP Stmt
   36     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 94
    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 95


State 73

   34 Stmt: WHILE LP . Exp RP Stmt
   37     | WHILE LP . error RC
   38     | WHILE LP . error RP Stmt

    error  shift, and go to state 96
    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 97


State 74

   59 Exp: ID LP . Args RP
   60    | ID LP . RP

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    RP     shift, and go to state 98

    Exp   go to state 99
    Args  go to state 100


State 75

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   57    | MINUS Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 57 (Exp)


State 76

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   58    | NOT Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 58 (Exp)


State 77

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   56    | LP Exp . RP
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 101
    LB        shift, and go to state 90


State 78

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 79

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 80

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 81

   48 Exp: Exp ASSIGNOP . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 102


State 82

   51 Exp: Exp RELOP . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 103


State 83

   52 Exp: Exp PLUS . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 104


State 84

   53 Exp: Exp MINUS . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 105


State 85

   54 Exp: Exp STAR . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 106


State 86

   55 Exp: Exp DIV . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 107


State 87

   49 Exp: Exp AND . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 108


State 88

   50 Exp: Exp OR . Exp

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 109


State 89

   62 Exp: Exp DOT . ID

    ID  shift, and go to state 110


State 90

   61 Exp: Exp LB . Exp RB

    FLOAT  shift, and go to state 53
    INT    shift, and go to state 54
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 111


State 91

   47 Dec: VarDec ASSIGNOP Exp .
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90

    $default  reduce using rule 47 (Dec)


State 92

   45 DecList: Dec COMMA DecList .

    $default  reduce using rule 45 (DecList)


State 93

   31 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 94

   35 Stmt: IF LP error . RP Stmt
   36     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 112


State 95

   32 Stmt: IF LP Exp . RP Stmt
   33     | IF LP Exp . RP Stmt ELSE Stmt
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 113
    LB        shift, and go to state 90


State 96

   37 Stmt: WHILE LP error . RC
   38     | WHILE LP error . RP Stmt

    RP  shift, and go to state 114
    RC  shift, and go to state 115


State 97

   34 Stmt: WHILE LP Exp . RP Stmt
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    RP        shift, and go to state 116
    LB        shift, and go to state 90


State 98

   60 Exp: ID LP RP .

    $default  reduce using rule 60 (Exp)


State 99

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   66 Args: Exp . COMMA Args
   67     | Exp .

    COMMA     shift, and go to state 117
    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90

    $default  reduce using rule 67 (Args)


State 100

   59 Exp: ID LP Args . RP

    RP  shift, and go to state 118


State 101

   56 Exp: LP Exp RP .

    $default  reduce using rule 56 (Exp)


State 102

   48 Exp: Exp . ASSIGNOP Exp
   48    | Exp ASSIGNOP Exp .
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    RELOP     shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    DOT       shift, and go to state 89
    LB        shift, and go to state 90

    $default  reduce using rule 48 (Exp)


State 103

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   51    | Exp RELOP Exp .
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84
    STAR   shift, and go to state 85
    DIV    shift, and go to state 86
    DOT    shift, and go to state 89
    LB     shift, and go to state 90

    $default  reduce using rule 51 (Exp)


State 104

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   52    | Exp PLUS Exp .
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    DOT   shift, and go to state 89
    LB    shift, and go to state 90

    $default  reduce using rule 52 (Exp)


State 105

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   53    | Exp MINUS Exp .
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    DOT   shift, and go to state 89
    LB    shift, and go to state 90

    $default  reduce using rule 53 (Exp)


State 106

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   54    | Exp STAR Exp .
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    DOT  shift, and go to state 89
    LB   shift, and go to state 90

    $default  reduce using rule 54 (Exp)


State 107

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   55    | Exp DIV Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
